Evento teste do formulário

--- a/src/app/nova-transferencia/nova-transferencia.component.html
+++ b/src/app/nova-transferencia/nova-transferencia.component.html
@@ -4,12 +4,7 @@
 
     <div class="form-field">
       <label class="form-field_label" for="valor">Valor</label>
-      <input
-        class="form-field_input"
-        id="valor"
-        type="text"
-        [(ngModel)]="valor"
-      />
+      <input class="form-field_input" id="valor" type="text" />
     </div>
 
     <div class="form-field">
